fix(YouTube Music - Navigation bar components): Use 'Arrays.asList()' instead of 'List.of()'
RVX Music is also available on Android 5.0, which uses Java 7 (JDK 1.7).
Since 'List.of()' was added in Java 9 (JDK 1.9), building it as-is may result in a runtime exception on Android 5.0.
To avoid this, use 'Arrays.asList()' instead of 'List.of()'.